--- a/predict.html
+++ b/predict.html
@@ -10,18 +10,126 @@
     <title>Predict - Student Depression Prediction</title>
     <link rel="icon" href="static/assets/logo.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/styles.css" />
+    <style>
+        /* Sidebar Navigation */
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: -280px;
+            width: 280px;
+            height: 100vh;
+            background: var(--header-bg);
+            box-shadow: 2px 0 8px var(--header-shadow);
+            transition: left 0.3s ease;
+            z-index: 1000;
+            padding: 1rem;
+        }
+
+        .sidebar.active {
+            left: 0;
+        }
+
+        .sidebar-nav {
+            margin-top: 4rem;
+        }
+
+        .sidebar-nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .sidebar-nav ul li {
+            margin-bottom: 1rem;
+        }
+
+        .sidebar-nav ul li a {
+            color: var(--text-color);
+            text-decoration: none;
+            font-size: 1.1rem;
+            display: block;
+            padding: 0.8rem 1rem;
+            border-radius: 8px;
+            transition: background 0.2s;
+        }
+
+        .sidebar-nav ul li a:hover,
+        .sidebar-nav ul li a.active {
+            background: linear-gradient(90deg, #4f8cff22 30%, #a259ff22 100%);
+            color: #4f8cff;
+        }
+
+        .menu-toggle {
+            display: none;
+            background: none;
+            border: none;
+            color: var(--text-color);
+            font-size: 1.5rem;
+            cursor: pointer;
+            padding: 0.5rem;
+            z-index: 1001;
+        }
+
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+
+        .overlay.active {
+            display: block;
+        }
+
+        @media (max-width: 1024px) {
+            .menu-toggle {
+                display: block;
+                position: fixed;
+                top: 1rem;
+                left: 1rem;
+            }
+
+            .nav-menu {
+                display: none;
+            }
+
+            #theme-toggle {
+                position: fixed;
+                top: 1rem;
+                right: 1rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
+    <button class="menu-toggle" aria-label="Toggle menu">☰</button>
+    <div class="overlay"></div>
+    <div class="sidebar">
+        <nav class="sidebar-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="predict.html" class="active">Predict</a></li>
+                <li><a href="analyze.html">Analyze</a></li>
+                <li><a href="train_results.html">Models & Results</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <header>
-      <div class="header-container">
-        <div class="logo">
-          <a href="index.html"><img src="static/assets/logo.svg" alt="Logo" width="32" height="32"> <span>StudentDepression</span></a>
+        <div class="header-container">
+            <div class="logo">
+                <a href="index.html"><img src="static/assets/logo.svg" alt="Logo" width="32" height="32">
+                    <span>StudentDepression</span></a>
             </div>
             <nav class="nav-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="predict.html">Predict</a></li>
+                    <li><a href="predict.html" class="active">Predict</a></li>
                     <li><a href="analyze.html">Analyze</a></li>
                     <li><a href="train_results.html">Models & Results</a></li>
                     <li><a href="about.html">About</a></li>
